Fix icon display overflow and rightSide width

--- a/css/main.css
+++ b/css/main.css
@@ -61,23 +61,6 @@ body {
     color: #ffffff;
 }
 
-#sun {
-    height:256px;
-    width:146px;
-    bottom:0px;
-    right:0px;
-    position: absolute;
-    background: url("../img/sun.png") no-repeat;
-}
-
-#tree {
-    height:512px;
-    width:342px;
-    bottom:0px;
-    position: absolute;
-    background: url("../img/tree.png") no-repeat;
-}
-
 #BerryBeeBenson {
     width: 256px;
     height: 256px;
@@ -160,7 +143,7 @@ body {
 
 #rightSide {
     right:10px;
-    width:30%;
+    width:25%;
     height:90%;
     position: absolute;
     background: #7e6d38;
